<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.HomeActivity"
    >
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/bottom_menu_map"
        />
    <item
        android:id="@+id/action_restaurant"
        android:icon="@drawable/ic_list"
        android:title="@string/bottom_menu_list"
        />
    <item
        android:id="@+id/action_workmates"
        android:icon="@drawable/ic_workmates"
        android:title="@string/bottom_menu_workmates"
        />
</menu>